# pattern-tts-service

./: .gitignore  AGENT1_COMPLETION.md  AGENT8_MISSION_REPORT.md  CAPTAIN_QUICK_REFERENCE.md  DEVELOPMENT.md  DOCKER_BUILD_EVIDENCE.md  Dockerfile  Dockerfile.slim  GOLD_STAR_VALIDATION_REPORT_WO-015.md  KOKORO_VOICE_FILES_FIX.md  README.md  V1.0.3_VALIDATION_EVIDENCE.txt  VALIDATION_SUMMARY.md  dev.sh  env.example  pyproject.toml  validate_v1.0.3.sh
.github/workflows/: python-build-push-and-deploy.yml  verify-version-increment.yaml
docker/: Dockerfile  Dockerfile.slim
helm/pattern-tts/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/pattern-tts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
kubernetes/jobs/: download-kokoro-models.yaml
src/pattern_tts/api/: main.py
src/pattern_tts/api/routers/: __init__.py  openai_compatible.py
src/pattern_tts/core/: config.py
src/pattern_tts/services/: model_manager.py  voice_manager.py
